--- a/.looper.yml
+++ b/.looper.yml
@@ -19,7 +19,7 @@ flows:
   build:
    - exposeVars(maven)
    - (name Project information) echo "Building ${MAVEN_GROUP_ID}:${MAVEN_ARTIFACT_ID}:${MAVEN_VERSION}"
-   - (name Maven deploy) mvn -B clean deploy
+   - (name Maven deploy) mvn -B clean install
 
   release:
     - call: versionsCheck
